<resources>
    <string name="appName">Les Créations MP</string>

    <string name="codePieceLabel">#</string>
    <string name="codePieceHint">code</string>
    <string name="codePieceMessage">Le code doit avoir entre 1 et 4 chiffres</string>

    <string name="nomPieceLabel">Nom:</string>
    <string name="nomPieceHint"></string>
    <string name="nomPieceMessage">Le nom de la pièce ne peut être vide</string>

    <string name="descriptionPieceLabel">Desc:</string>
    <string name="descriptionPieceHint"></string>
    <string name="descriptionPieceMessage">La description de la pièce ne peut être vide</string>

    <string name="dimensionPieceLabel">Dim:</string>
    <string name="dimensionLargeurPieceHint">largeur (4-15 mm)</string>
    <string name="dimensionLongueurPieceHint">longueur (30-600 mm)</string>
    <string name="dimensionLargeurPieceMessage">La largeur doit être entre 4 et 15 mm</string>
    <string name="dimensionLongueurPieceMessage">La longueur doit être entre 30 et 600 mm</string>

    <string name="dimensionBraceletHint">longueur (20-60 mm)</string>
    <string name="dimensionBraceletMessage">Le bracelet doit avoir une longueur entre 20 et 60 millimètres</string>

    <string name="prixCoutantPieceLabel">Prix:</string>
    <string name="prixCoutantPieceHint">coutant (0.00 $)</string>
    <string name="prixCoutantPieceMessage">Le prix ne peut être 0 et doit être au format 0.00</string>

    <string name="qtyPieceLabel">Qté:</string>
    <string name="qtyPieceHint">en inventaire</string>

    <string name="typePieceLabel">Type:</string>
    <string name="typePieceHint">choisir un type</string>
    <string name="typePieceMessage">Il doit y avoir un type</string>

    <string name="categoriePieceLabel">Cat:</string>
    <string name="categoriePieceHint">choisir une catégorie</string>
    <string name="categoriePieceMessage">Il doit y avoir une catégorie</string>

    <string name="photoPieceLabel">Photo:</string>
    <string name="photoPieceHint">photo</string>

    <string name="ajouterBoutonLabel">Ajouter</string>
    <string name="modifierBoutonLabel">Modifier</string>
    <string name="annulerBoutonLabel">Annuler</string>

    <string name="retourPiecesBoutonLabel">Retour aux Pièces</string>
    <string name="ajouterPieceBoutonLabel">Ajouter une Pièce</string>
    <string name="modifierPieceBoutonLabel">Modifier une Pièce</string>
    <string name="ajouterBraceletBoutonLabel">Faire un Bracelet</string>
    <string name="piecesLabel">Pièces</string>
    <string name="inventairePieceLabel">Inventaire de Pièces</string>
    <string name="braceletsLabel">Bracelets</string>
    <string name="inventaireBraceletLabel">Inventaire de Bracelets</string>

    <string name="action_inventaire">Filtrer</string>
    <string name="title_activity_inventaire">Settings</string>

    <string name="action_piece">Modifier</string>
    <string name="title_activity_piece">Details</string>

    <string name="pref_code_label">Code</string>
    <string name="pref_code_key" translatable="false">Code</string>
    <string name="pref_code_default" translatable="false">911</string>

</resources>
