<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.creationsmp.PieceActivityEdit"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/codePieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/codePiece_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/codePieceHint"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            android:layout_weight="0.12" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/nomPieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nomPiece_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:hint="@string/nomPieceHint"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/descriptionPieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descriptionPiece_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionPieceHint"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/dimensionPieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/dimensionPiece_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dimensionPieceHint"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/prixCoutantPieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/prixCoutantPiece_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prixCoutantPieceHint"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/qtyPieceLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/qtyPiece_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qtyPieceHint"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="5dp"
                android:text="@string/typePieceLabel"
                android:paddingTop="15dp"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/typePiece_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/typePieceHint"
                android:text="Choisir"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="5dp"
                android:text="@string/categoriePieceLabel"
                android:paddingTop="15dp"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/categoriePiece_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/categoriePieceHint"
                android:text="Choisir"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/ajouterPieceBouton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ajouterPieceListener"
            android:layout_weight="1"
            android:text="@string/ajouterPieceLabel" />

        <Button
            android:id="@+id/annulerAjouterPieceBouton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="annulerAjouterPieceListener"
            android:layout_weight="1"
            android:text="@string/annulerAjouterPieceLabel" />


    </LinearLayout>

</LinearLayout>

